syntax = "proto3";

package waves.dex.grpc.integration;
option java_package = "com.wavesplatform.dex.grpc.integration.services.balances";

import "google/protobuf/empty.proto";

service BalancesService {
    rpc GetBalanceChanges (google.protobuf.Empty) returns (stream BalanceChangesResponse);
}

message BalanceChangesResponse {
    message Record {
        bytes address = 1;
        bytes asset = 2;
        int64 balance = 3;
    }
    repeated Record batch = 1;
}